app/assets/stylesheets/layout_enhancements.css.scss
// Place all the styles related to the rating_groups controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.text-center {
  text-align: center;
}

.grid-center {
  margin-left: auto;
  margin-right: auto;
}

.reveal-modal {
  margin-bottom: 0em;
}

.index_entry_header {
  display: inline;
  margin-left: 0.2em;
}

.index_entry_icons {
  padding:{
    top: .6em;
    right: .5em;
  }

  float: right;
}

.row.down {
  margin-top: 6em;
}

.row.large-full {
  max-width: none !important;
  margin-left: 0;
  margin-right: 0;
  padding-left: 2em;
  padding-right: 2em;
}

.margin-none {
  margin: 0 !important;
}

form {
  margin-bottom: 0;

  .button {
    margin-bottom: 0;
  }

  .button.with-bottom-margin {
    margin-bottom: 1.25em;
  }
}

td.minimum-width {
  white-space: nowrap;
  width: 1em;
}

input[type="file"] {
  width: auto;
}

input[type="checkbox"].no-margin {
  margin-right: 0;
  margin-bottom: 0;
}

a.account-top-bar {
  height: 45px;
  i {
    color: #fff;
    margin-right: 0.5em;
    font-size: 1.8em;
    vertical-align: middle;
  }
}

